# precise_adc

source/: CMakeLists.txt  prj.conf
source/boards/: stm32f3_disco.overlay
source/src/: adc_sampling.c  adc_sampling.h  app_shellcmd_adc.c  calc_avg.c  calc_avg.h  main.c
